--- a/public/aender.html
+++ b/public/aender.html
@@ -205,7 +205,7 @@
 
 
 <div class="input-group mb-3">
-  <input type="text" class="form-control" placeholder="Neue Übung" id="neueUebung" aria-label="Recipient's username" aria-describedby="button-addon2">
+  <input type="text" class="form-control" placeholder="Neue Übung" id="neueUebung" maxlength="15" aria-label="Recipient's username" aria-describedby="button-addon2">
   <button class="btn btn-outline-success" type="button" id="button-addon2" onclick=neueuebung()>Hinzufügen</button>
 </div>
             
