--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
           <a class="nav-link" href="#">Über</a>
         </li>
 	<li class="nav-item">
-          <a class="nav-link" href="/hinzufuegen">Hinzufügen</a>
+          <a class="nav-link" href="#">Hinzufügen</a>
         </li>
 	
       </ul>
@@ -47,8 +47,16 @@
     <div class="col-md-5 p-lg-5 mx-auto my-5">
       <h1 class="display-4 fw-normal" id="Timeleft">-Zeit-</h1>
       <p class="lead fw-normal" id="Anweisung">-Übung-<br>Starte dein Training</p>
-      <a class="btn btn-primary btn-lg" onclick=starttraining()>START</a>
-      <br>
+      <button type="button" class="btn btn-primary btn-lg" id="Startbutton" disabled onclick=starttraining()>START</button>
+      <script>
+	document.getElementById('Startbutton').disabled = false;
+	</script>
+<br>
+<h1 class="display-4 fw-normal"></h1>
+	<div class="progress">
+  <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+	<br>
 <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light" style="border: solid black">
 	<h2 class="display-4 fw-normal">Aktuelles Training</h2>	
 	<p class="lead fw-normal"><script>document.write(sessionStorage.getItem("Durchgaenge"));</script> Einheit(en)</p>
